--- a/index.html
+++ b/index.html
@@ -1,47 +1,207 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./styles/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
-      <div class="container">
-        <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menudesktop" aria-controls="menudesktop" aria-expanded="false" aria-label="Alterna navegação">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse  justify-content-end" id="menudesktop">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Habilidades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Sobre</a>
-            </li>         
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Portifólios</a>
-            </li>
-          </ul>         
-        </div>
+  <!-------NAV BAR------>
+  <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
+    <div class="container">
+      <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menudesktop"
+        aria-controls="menudesktop" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse  justify-content-end" id="menudesktop">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Habilidades</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Portifólios</a>
+          </li>
+        </ul>
       </div>
-      </nav>
+    </div>
+  </nav>
 
-   
+  <!------CAROUSEL----->
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100 imagem-carousel" src="img/codeyour.jpg" alt="Code">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 imagem-carousel" src="img/Javascript.webp" " alt="JavaScript">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/A vida.jpg" alt="Parabéns">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</header>
 
-    
-  
+  <!--SOBRE-->
+  <section class="text-center my-4">
+    <h3 class="font-roxo font-weight-bold">Vanessa</h3>
+    <h5 class="font-italic font-weight-light m-2 font-roxo">Desenvolvedora Front-end</h5>
 
-  
+    <div class="pt-4 d-flex flex-column flex-md-row justify-content-md-around redes-sociais">
+      <a href="*mailto:github.com/nessa-mello" class="p-2 link-sobre">
+        <i class="fab fa-github-square"></i>
+        <span>Endereço de GitHub</span>
+      </a>
+
+      <a href="*mailto:linkedin.com/in/vanessamello5" class="link-sobre">
+        <i class="fab fa-linkedin"></i>
+        <span>Endereço de Linkedin</span>
+      </a>
+
+      <a href="mailto:nessa_comex@hotmail.com" class="link-sobre">
+        <i class="fas fa-envelope-open-text"></i>
+        <span>Endereço de E-mail</span>
+      </a>
+    </div>
+  </section>
+
+<!-- HABILIDADES-->
+
+<section class="bg-roxo text-white d-flex flex-column flex-lg-row justify-content-lg-around p-4">
+
+  <div class="habilidades w-100">
+  <h2 class="text-center">Habilidades</h2>
+
+  <div class="icones pt-3 row justify-content-center">
+
+  <div>
+    <div class="text-center redes-sociais col">
+      <i class="fab fa-html5"></i>
+      <p class="text-white">HTML</p>
+    </div>
+
+    <div class="text-center redes-sociais col">
+      <i class="fab fa-css3-alt"></i>
+      <p class="text-white">CSS</p>
+    </div>
+
+    <div class="text-center redes-sociais col">
+      <i class="fab fa-js"></i>
+      <p class="text-white">JAVASCRIPT</p>
+    </div>
+  </div>
+
+  <div>
+    <div class="text-center redes-sociais col">
+      <i class="fab fa-sass"></i>
+      <p class="text-white">Sass</p>
+    </div>
+
+    <div class="text-center redes-sociais col">
+      <i class="fas fa-book"></i>
+      <p class="text-white">jQuery</p>
+    </div>
+ 
+    <div class="text-center redes-sociais col">
+      <i class="">fab fa-react</i>
+      <p class="text-white">React</p>
+    </div>
+  </div>
+
+  <div>
+    <div class="text-center redes-sociais col"> 
+      <i class="fab fa-bootstrap"></i>
+      <p class="text-white">Bootstrap</p>
+    </div>
+
+    <div class="text-center redes-sociais col">
+      <i class="fab fa-github-square"></i>
+      <p class="text-white">Git</p>
+    </div>
+
+    <div class="text-center redes-sociais col">
+      <i class="fab fa-bootstrap"></i>
+      <p class="text-white">Bootstrap</p>
+    </div>
+  </div>
+
+  </div>
+</div>
+
+    <div class="sobre text-center w-100">     
+    <h2>Sobre</h2>
+      <p class="pt-3">Olá, tudo bem com você? Sou a Vanessa Mello, desenvolvedora front-end, aprendendo HTML / CSS / JavaScript e React.
+      Além de programar, também sou formada em Ciências Contábeis/Administração e possuo uma grande experiência na área Financeira e busco me tornar um elo de ligação entre a área de Finanças com o mercado de tecnologia. Aréas de interesse, Banco de Dados (DBA) .</p>
+
+</div>
+
+</section class="container mb-5 modal-cards">
+
+<!-- CARD 1 -->
+<div class="card" style="width: 18rem;">
+  <img src="img/Fotogjpg.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Projeto</h5>
+    <p class="card-text">Aqui vai um resumo do projeto</p>
+  </div>
+</div>
+
+  <button type="button" class="btn btg-roxo text-white" data-toggle="modal" data-target="#modal1">
+    Veja mais
+    </button>
+</div>
+
+<!-- Modal 1 -->
+<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLongTitle">Projeto</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+  <p>Aqui tem a descrição completa do projeto</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <button type="button" class="btn secondary" data-dismiss="modal">Close</button> 
+    <a href="#" target="blank" class="bg-roxo text-white">Ver páginas</a>
+  </div>
+</div>
+</div>
+</div>
 
 
 
-    <script src="./js/jquery-3.4.1.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
+
+
+  <script src="./js/jquery-3.4.1.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
