--- a/index.html
+++ b/index.html
@@ -65,27 +65,28 @@
   </div>
 </header>
 
-  <!--TITULO-->
-  <section class="text-center my-4">
-    <h3 class="font-roxo font-weight-bold">Vanessa</h3>
-    <h5 class="font-italic font-weight-light m-2 font-roxo">Desenvolvedora Front-end</h5>
+  <!--TÍTULO-->
+  <section id="sobre" class="text-center my-4">
+    <h3 class="font-roxo font-weight-bold">Vanessa Mello</h3>
+    <h5 class="font-italic font-weight-lightgit m-2 font-roxo">Desenvolvedora front-end</h5>
 
-    <div class="pt-4 d-flex flex-column flex-md-row justify-content-md-around redes-sociais">
+    <div class="d-flex flex-column flex-md-row justify-content-md-around redes-sociais">
       <a href="*mailto:github.com/nessa-mello" class="p-2 link-sobre">
         <i class="fab fa-github-square"></i>
         <span>Endereço de GitHub</span>
       </a>
+      <a href="mailto:nessa_comex@hotmail.com" class="link-sobre">
+        <i class="fas fa-envelope-open-text"></i>
+        <span>Endereço de E-mail</span>
 
       <a href="*mailto:linkedin.com/in/vanessamello5" class="link-sobre">
         <i class="fab fa-linkedin"></i>
         <span>Endereço de Linkedin</span>
       </a>
-
-      <a href="mailto:nessa_comex@hotmail.com" class="link-sobre">
-        <i class="fas fa-envelope-open-text"></i>
-        <span>Endereço de E-mail</span>
+/span>
       </a>
     </div>
+  </div>
   </section>
 
 <!-- HABILIDADES-->
@@ -163,14 +164,15 @@
 <section id="portifolios" class="diva-mãe__cardtitle text-center mt-5">
 <h2>Portfólio</h2>
 
-<div class="row justify-content-around container mb-5 modal-cards">
+<div class="row justify-content-around mb-5 modal-cards">
 
 <!-- CARD 1 -->
 <div class="card m-5" style="width: 18rem;">
   <img src="img/Rosa2.png" class="card-img-top" alt="M-de-Maravilhosa">
   <div class="card-body">
     <h5 class="card-title">M de Maravilhosa</h5>
-    <p class="card-text">Projeto inspirado na escolha de uma personalidade Maravilhosa. No meu projeto criei uma página responsiva de perfil da Rosa Parks que foi uma ativista do movimento dos direitos civis dos negros nos Estados Unidos.Projeto realizado com HTML e CSS</p>
+    
+    <p class="card-text">Projeto inspirado na escolha de uma personalidade Maravilhosa. No meu projeto criei uma página responsiva de perfil da Rosa Parks que foi uma ativista do movimento dos direitos civis dos negros nos Estados Unidos. Projeto realizado com HTML e CSS</p>
   </div>
   <button type="button" class="m-5 btn bg-roxo text-white m-auto" data-toggle="modal" data-target="#modal1">
     Veja mais
@@ -200,10 +202,10 @@
 
 <!-- CARD 2 -->
 <div class="card text-center" style="width: 18rem;">
-  <img src="img/To do list.png" class="card-img-top imagem-class" alt="Lista de Tarefas">
+  <img src="img/Capturar.PNG" class="card-img-top" alt="Lista de Tarefas">
   <div class="card-body">
-    <h5 class="card-title">LISTA DE TAREFAS</h5>
-    <p class="card-text">To-do-list, foi criada como exercicio do módulo</p>
+    <h5 class="card-title">Lista de Tarefas</h5>
+    <p class="card-text">Projeto To do list. Exercício da semana 8 com foco no desenvolvimento de uma lista de tarefas.</p>
   </div>
   <button type="button" class="m-5 btn bg-roxo text-white m-auto" data-toggle="modal" data-target="#modal2">
     Veja mais
@@ -224,7 +226,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <a href="#" target="blank" class="bg-roxo text-white">Ver páginas</a>
+    <a href="colocar aqui o site que fiz de um projeto que já coloquei no Netlfly" target="blank" class="bg-roxo text-white">Ver páginas</a>
   </div>
 </div>
 </div>
@@ -235,8 +237,8 @@
 <div class="card m-5" style="width: 18rem;">
   <img src="img/Netflix.PNG" class="card-img-top" alt="Netflix">
   <div class="card-body">
-    <h5 class="card-title">RÉPLICA PÁGINA NETFLIX</h5>
-    <p class="card-text">Recriando a tela de login do Netflix em 2 horas, desenvolvida como técnica de aprendizado no Webinar da ironhacksao.</p>Aqui vai um resumo do projeto</p>
+    <h5 class="card-title">Réplica da página Netflix</h5>
+    <p class="card-text">Recriando a tela de login do Netflix em 2 horas, desenvolvido como técnica de aprendizado no Webinar da Ironhacksao.
   </div>
   <button type="button" class="m-5 btn bg-roxo text-white m-auto" data-toggle="modal" data-target="#modal3">
     Veja mais
@@ -266,7 +268,7 @@
 </section>
 
 <footer class="text-center bg-roxo text-white">
-  <p>Projeto desenvolvido por Vanessa Mello. Obrigado {RE<span class="font-weight-light">programa}</span></p>
+  <p>Projeto desenvolvido por Vanessa Mello. Enquanto aluna da {RE<span class="font-weight-light">programa}</span></p>
 </footer>
 
   <script src="./js/jquery-3.4.1.min.js"></script>
